--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                         <div class="slide-photo circle-brown slide-intro-circle2 transformRight"></div>
                         <div class="slide-photo slide-intro-man"></div>
                     </div>
-                    <div class="container about-page">
+                    <div class="container step-page">
                         <div class="row">
                             <div class="col-sm-5 col-6">
                                 <h1>Бидний сонгох шалтгаан</h1>
@@ -282,20 +282,20 @@
                         </div>
                     </div>
                 </div>
-                <div class="banner2 pl-4">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-4 bosoo-line">
-                                <h5>Алсын хараа</h5>
-                                <h1>Хөрөнгийн шинэ соёлыг бүтээнэ</h1>
-                            </div>
-                            <div class="col-4 bosoo-line">
-                                <h5>Эрхэм зорилго</h5>
-                                <h1>Хөрөнгийн хуваарилалтаар баялгийг бүтээнэ</h1>
-                            </div>
-                            <div class="col-4 bosoo-line">
-                                <h5>Стратеги</h5>
-                                <h1>Гүн харах</h1>
+                <div class="banner3">
+                    <div class="banner">
+                        <div class="row-cont">
+                            <div class="banner-info">
+                                <h2 class="title">Хөрөнгө оруулалтын боломж</h2>
+                                <div class="banner-frame">
+                                    <div class="app-box text-center">
+                                        <a href="#1"><img src="./images/app-store-btn.png" alt=""></a>
+                                        <a href="#2"><img src="./images/web-platform-btn.png" alt=""></a>
+                                        <a href="#3"><img src="./images/google-play-btn.png" alt=""></a>
+                                    </div>
+                                </div>
+                                <div class="imac"></div>
+                                <div class="iphone"></div>
                             </div>
                         </div>
                     </div>
@@ -327,52 +327,52 @@
                 </div>
             </div>
 
-            <div class="section pp-scrollable slide-personal-services">
+            <div class="section pp-scrollable slide-personal-services slide-dark">
                 <div class="slide-container2">
                     <div class="slide-bg">
                         <div class="slide-photo circle-golden slide-intro-circle1 transformLeft"></div>
                         <div class="slide-photo circle-brown slide-intro-circle2 transformRight"></div>
                         <div class="slide-photo slide-intro-man"></div>
                     </div>
-                    <div class="container about-page">
+                    <div class="container services-page">
                         <div class="row">
-                            <div class="col-sm-5 col-6">
-                                <h1>Бидний сонгох шалтгаан</h1>
-                                <ul>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Салбартаа тэргүүлэгч</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Харилцагчдын итгэл</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Олон жилийн туршлага</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Хөрөнгө оруулагчдын өндөр үнэлгээ</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Мэргэжлийн мэргэшсэн баг</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Цаг үеийн судалгаа шинжилгээ</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Өндөр дүнтэй бонд</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Амжилттай хэрэгжсэн ipo төсөл</span></li>
-                                    <li><i class="lni lni-checkmark-circle"></i><span>Биржийн бус зах зээл /OTC/-д тэргүүлэгч</span></li>
-                                </ul>
-                                <div class="banner-btn text-center">
-                                    <a href="#" class="btn btn-outline-success mt-4 full-btn">Илүү ихийг</a>
+                            <div class="col-12">
+                                <h1 class="text-center">Бидний үйлчилгээ</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-4">
+                                <div class="service-box text-center">
+                                    <i class="lni lni-checkmark-circle"></i>
+                                    <div class="title">
+                                        <h4>Брокерийн үйлчилгээ</h4>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="col-sm-7 col-6">
-                                <img src="https://picsum.photos/600/400" alt="" class="about-image">
+                            <div class="col-4">
+                                <div class="service-box text-center">
+                                    <i class="lni lni-checkmark-circle"></i>
+                                    <div class="title">
+                                        <h4>Брокерийн үйлчилгээ</h4>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-4">
+                                <div class="service-box text-center">
+                                    <i class="lni lni-checkmark-circle"></i>
+                                    <div class="title">
+                                        <h4>Брокерийн үйлчилгээ</h4>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="banner2 pl-4">
+                <div class="partners">
                     <div class="container">
                         <div class="row">
-                            <div class="col-4 bosoo-line">
-                                <h5>Алсын хараа</h5>
-                                <h1>Хөрөнгийн шинэ соёлыг бүтээнэ</h1>
-                            </div>
-                            <div class="col-4 bosoo-line">
-                                <h5>Эрхэм зорилго</h5>
-                                <h1>Хөрөнгийн хуваарилалтаар баялгийг бүтээнэ</h1>
-                            </div>
-                            <div class="col-4 bosoo-line">
-                                <h5>Стратеги</h5>
-                                <h1>Гүн харах</h1>
+                            <div class="col-12">
+                                <h1 class="text-center">Хамтрагч байгууллагууд</h1>
                             </div>
                         </div>
                     </div>
